--- a/biography.html
+++ b/biography.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Автобіографія Лисенка Дениса Олександровича.</title>
@@ -16,6 +17,7 @@
             line-height: 1.5;
             margin: 5px;
         }
+
         a:hover {
             background-color: magenta; 
         }
@@ -25,11 +27,14 @@
         }
 
         article {
-            background-color: lightgrey; 
-            color: black; 
-            padding: 20px;
-            border: 1px solid black; 
             margin: 10px;
+            border: 1px solid black; 
+            padding: 20px;
+        }
+
+        h2 {
+            text-align: center;
+            font-size: 22px;
         }
 
         #childhood {
@@ -47,37 +52,9 @@
         #university {
             background-color: lightsalmon; 
         }
-        h1 {
-            text-align: center;
-            font-size: 22px;
-        }
-
-        p a {
-            font-style: italic;
-        }
-
-        h3 {
-            text-align: center;
-        }
-
-        article {
-            font-size: 120%;
-        }
-
-        article h2 {
-            font-size: 144%;
-            font-weight: bold;
-        }
-
-        article p a {
-            font-weight: bold;
-        }
-
-        p:last-child a {
-            text-transform: uppercase;
-        }
     </style>
 </head>
+
 <body>
     <h1>Автобіографія Лисенка Дениса Олександровича.</h1>
 
@@ -92,47 +69,45 @@
         <li><a href="#university">Університет</a></li>
     </ul>
 
-    <article id="basic_info">
-        <h2>Базова інформація</h2>
-        <p>Я Лисенко Денис Олександрович, мені 17 років.
-         4 квітня 2024 року, мені виповниться повних 18 років.
-         Народився я у 2006 в Миколаєві, на навчання переїхав у Івано-Франківськ.</p>
-        <p>Додаткова інформація... Полюбляю грати в комп'ютерні ігри - (Dota 2), (CS:GO).</p>
-        <p><a href="#top">До змісту</a></p>
-    </article>
+    <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+        <article id="basic_info">
+            <h2>Базова інформація</h2>
+            <p>Я Лисенко Денис Олександрович, мені 17 років. 4 квітня 2024 року, мені виповниться повних 18 років. Народився я у 2006 в Миколаєві, на навчання переїхав у Івано-Франківськ.</p>
+            <p>Додаткова інформація... Полюбляю грати в комп'ютерні ігри - (Dota 2), (CS:GO).</p>
+            <p><a href="#top">До змісту</a></p>
+        </article>
 
-    <article id="childhood">
-        <h2>Дитинство</h2>
-        <p>Якось одного разу граючі в футбол, я зламав обидві ноги, більше в футбол я не граю.</p>
-        <p>Додаткова інформація... Був бешкетником та задирою вмалому віці.</p>
-        <p><a href="#top">До змісту</a></p>
-    </article>
+        <article id="childhood">
+            <h2>Дитинство</h2>
+            <p>Якось одного разу граючі в футбол, я зламав обидві ноги, більше в футбол я не граю.</p>
+            <p>Додаткова інформація... Був бешкетником та задирою вмалому віці.</p>
+            <p><a href="#top">До змісту</a></p>
+        </article>
 
-    <article id="school_years">
-        <h2>Шкільні роки</h2>
-        <p>Гарно навчався та мав хороші оцінки до 7 класу, а далі  не пішло. Добре знаю англійську мову.
-         Моя шкільна дорога була важливою частиною мого життя...</p>
-        <p>Додаткова інформація... Ніколи не любив фізику!</p>
-        <p><a href="#top">До змісту</a></p>
-    </article>
+        <article id="school_years">
+            <h2>Шкільні роки</h2>
+            <p>Гарно навчався та мав хороші оцінки до 7 класу, а далі  не пішло. Добре знаю англійську мову. Моя шкільна дорога була важливою частиною мого життя...</p>
+            <p>Додаткова інформація... Ніколи не любив фізику!</p>
+            <p><a href="#top">До змісту</a></p>
+        </article>
 
-    <article id="extracurricular">
-        <h2>Поза школою</h2>
-        <p>В довільний час, любив грати в волейбол. Пізнише заняв 2 місце на змаганнях та маю медаль.
-         Вдягнувши в спортивний костюм, я завжди був готовий до пригод...</p>
-        <p>Додаткова інформація... 3 рази ламав ноги через футбол, ненавіджу його!</p>
-        <p><a href="#top">До змісту</a></p>
-    </article>
+        <article id="extracurricular">
+            <h2>Поза школою</h2>
+            <p>В довільний час, любив грати в волейбол. Пізнише заняв 2 місце на змаганнях та маю медаль. Вдягнувши в спортивний костюм, я завжди був готовий до пригод...</p>
+            <p>Додаткова інформація... 3 рази ламав ноги через футбол, ненавіджу його!</p>
+            <p><a href="#top">До змісту</a></p>
+        </article>
 
-    <article id="university">
-        <h2>Університет</h2>
-        <p>Наразі я тількі входжу в кукрс діла та знайомлюсь з новими друзями.
-         Думаю мої університетські роки виявляться дуже цікавими і важливими для мене...</p>
-        <p>Додаткова інформація... Подобається С++ та ВЕБ, але мат аналіз...</p>
-        <p><a href="#top">До змісту</a></p>
-    </article>
+        <article id="university">
+            <h2>Університет</h2>
+            <p>Наразі я тількі входжу в кукрс діла та знайомлюсь з новими друзями. Думаю мої університетські роки виявляться дуже цікавими і важливими для мене...</p>
+            <p>Додаткова інформація... Подобається С++ та ВЕБ, але мат аналіз...</p>
+            <p><a href="#top">До змісту</a></p>
+        </article>
+    </div>
 
     <hr>
     <p><a href="#top">Уверх</a></p>
 </body>
+
 </html>
