--- a/biography.html
+++ b/biography.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Автобіографія Лисенка Дениса Олександровича.</title>
     <style>
-        a {
+        a 
+        {
             display: inline-block;
             padding: 10px 20px;
             background-color: blue;
@@ -18,15 +19,18 @@
             margin: 5px;
         }
 
-        a:hover {
+        a:hover 
+        {
             background-color: magenta; 
         }
 
-        a:active {
+        a:active 
+        {
             background-color: yellow; 
         }
 
-        article {
+        article 
+        {
             margin: 10px;
             border: 1px solid black; 
             padding: 20px;
@@ -37,19 +41,23 @@
             font-size: 22px;
         }
 
-        #childhood {
+        #childhood 
+        {
             background-color: lightblue; 
         }
 
-        #school_years {
+        #school_years 
+        {
             background-color: lightgreen; 
         }
 
-        #extracurricular {
+        #extracurricular 
+        {
             background-color: lightyellow; 
         }
 
-        #university {
+        #university 
+        {
             background-color: lightsalmon; 
         }
     </style>
