--- a/biography.html
+++ b/biography.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>Автобіографія Лисенка Дениса Олександровича.</title>
     <style>
-        a 
-        {
+        a {
             display: inline-block;
             padding: 10px 20px;
             background-color: blue;
@@ -19,18 +18,15 @@
             margin: 5px;
         }
 
-        a:hover 
-        {
+        a:hover {
             background-color: magenta; 
         }
 
-        a:active 
-        {
+        a:active {
             background-color: yellow; 
         }
 
-        article 
-        {
+        article {
             margin: 10px;
             border: 1px solid black; 
             padding: 20px;
@@ -41,24 +37,36 @@
             font-size: 22px;
         }
 
-        #childhood 
-        {
+        #basic_info {
+            background-color: lightgrey; 
+        }
+
+        #childhood {
             background-color: lightblue; 
         }
 
-        #school_years 
-        {
+        #school_years {
             background-color: lightgreen; 
         }
 
-        #extracurricular 
-        {
+        #extracurricular {
             background-color: lightyellow; 
         }
 
-        #university 
-        {
+        #university {
             background-color: lightsalmon; 
+        }
+
+        .flex-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+
+        @media only screen and (max-width: 991px) {
+            .flex-container {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
@@ -77,7 +85,7 @@
         <li><a href="#university">Університет</a></li>
     </ul>
 
-    <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+    <div class="flex-container">
         <article id="basic_info">
             <h2>Базова інформація</h2>
             <p>Я Лисенко Денис Олександрович, мені 17 років. 4 квітня 2024 року, мені виповниться повних 18 років. Народився я у 2006 в Миколаєві, на навчання переїхав у Івано-Франківськ.</p>
