--- a/biography.html
+++ b/biography.html
@@ -18,53 +18,65 @@
             margin: 5px;
         }
 
-        a:hover {
+        a:hover 
+        {
             background-color: magenta; 
         }
 
-        a:active {
+        a:active 
+        {
             background-color: yellow; 
         }
 
-        article {
+        article 
+        {
             margin: 10px;
             border: 1px solid black; 
             padding: 20px;
         }
 
-        h2 {
+        h2 
+        {
             text-align: center;
             font-size: 22px;
         }
 
-        #basic_info {
+        #basic_info 
+        {
             background-color: lightgrey; 
         }
 
-        #childhood {
+        #childhood 
+        {
             background-color: lightblue; 
         }
 
-        #school_years {
+        #school_years 
+        {
             background-color: lightgreen; 
         }
 
-        #extracurricular {
+        #extracurricular 
+        {
             background-color: lightyellow; 
         }
 
-        #university {
+        #university 
+        {
             background-color: lightsalmon; 
         }
 
-        .flex-container {
+        .flex-container 
+        {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
         }
 
-        @media only screen and (max-width: 991px) {
-            .flex-container {
+        @media only screen and (max-width: 991px) 
+        {
+            .flex-container 
+            {
                 flex-direction: column;
             }
         }
