--- a/biography.html
+++ b/biography.html
@@ -73,11 +73,26 @@
             justify-content: space-between;
         }
 
-        @media only screen and (max-width: 991px) 
+        .flex-item 
         {
-            .flex-container 
+            box-sizing: border-box;
+            width: 100%; 
+            margin-bottom: 20px; 
+        }
+
+        @media only screen and (min-width: 768px) 
+        {
+            .flex-item 
             {
-                flex-direction: column;
+                width: calc(33.33% - 20px); 
+            }
+        }
+
+        @media only screen and (min-width: 992px) 
+        {
+            .flex-item 
+            {
+                width: calc(25% - 20px); 
             }
         }
     </style>
@@ -98,35 +113,35 @@
     </ul>
 
     <div class="flex-container">
-        <article id="basic_info">
+        <article id="basic_info" class="flex-item">
             <h2>Базова інформація</h2>
             <p>Я Лисенко Денис Олександрович, мені 17 років. 4 квітня 2024 року, мені виповниться повних 18 років. Народився я у 2006 в Миколаєві, на навчання переїхав у Івано-Франківськ.</p>
             <p>Додаткова інформація... Полюбляю грати в комп'ютерні ігри - (Dota 2), (CS:GO).</p>
             <p><a href="#top">До змісту</a></p>
         </article>
 
-        <article id="childhood">
+        <article id="childhood" class="flex-item">
             <h2>Дитинство</h2>
             <p>Якось одного разу граючі в футбол, я зламав обидві ноги, більше в футбол я не граю.</p>
             <p>Додаткова інформація... Був бешкетником та задирою вмалому віці.</p>
             <p><a href="#top">До змісту</a></p>
         </article>
 
-        <article id="school_years">
+        <article id="school_years" class="flex-item">
             <h2>Шкільні роки</h2>
             <p>Гарно навчався та мав хороші оцінки до 7 класу, а далі  не пішло. Добре знаю англійську мову. Моя шкільна дорога була важливою частиною мого життя...</p>
             <p>Додаткова інформація... Ніколи не любив фізику!</p>
             <p><a href="#top">До змісту</a></p>
         </article>
 
-        <article id="extracurricular">
+        <article id="extracurricular" class="flex-item">
             <h2>Поза школою</h2>
             <p>В довільний час, любив грати в волейбол. Пізнише заняв 2 місце на змаганнях та маю медаль. Вдягнувши в спортивний костюм, я завжди був готовий до пригод...</p>
             <p>Додаткова інформація... 3 рази ламав ноги через футбол, ненавіджу його!</p>
             <p><a href="#top">До змісту</a></p>
         </article>
 
-        <article id="university">
+        <article id="university" class="flex-item">
             <h2>Університет</h2>
             <p>Наразі я тількі входжу в кукрс діла та знайомлюсь з новими друзями. Думаю мої університетські роки виявляться дуже цікавими і важливими для мене...</p>
             <p>Додаткова інформація... Подобається С++ та ВЕБ, але мат аналіз...</p>
