--- a/nowadays.html
+++ b/nowadays.html
@@ -12,6 +12,7 @@
         li:nth-child(even) {
             background-color: white; 
         }
+        
         h1 {
             text-align: center;
             font-size: 22px;
@@ -24,6 +25,12 @@
         h2 {
             text-align: center;
         }
+
+        .block {
+            border: 1px solid black;
+            margin: 10px;
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
@@ -31,61 +38,65 @@
 
     <p><a href="index.html"><i>Назад на головну</i></a></p>
 
-    <h2>Мій типовий список покупок</h2>
-    <ul>
-        <li>Молочні продукти:
-            <ul>
-                <li>Молоко</li>
-                <li>Йогурт</li>
-                <li>Масло</li>
-            </ul>
-        </li>
-        <li>Овочі:
-            <ul>
-                <li>Помідори</li>
-                <li>Огірки</li>
-                <li>Картопля</li>
-            </ul>
-        </li>
-        <li>М'ясо:
-            <ul>
-                <li>Курка</li>
-                <li>Свинина</li>
-                <li>Яловичина</li>
-            </ul>
-        </li>
-    </ul>
+    <div class="block">
+        <h2>Мій типовий список покупок</h2>
+        <ul>
+            <li>Молочні продукти:
+                <ul>
+                    <li>Молоко</li>
+                    <li>Йогурт</li>
+                    <li>Масло</li>
+                </ul>
+            </li>
+            <li>Овочі:
+                <ul>
+                    <li>Помідори</li>
+                    <li>Огірки</li>
+                    <li>Картопля</li>
+                </ul>
+            </li>
+            <li>М'ясо:
+                <ul>
+                    <li>Курка</li>
+                    <li>Свинина</li>
+                    <li>Яловичина</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 
-    <h2>Мій улюблений десерт</h2>
-    <ol>
-        <li>Приготувати торт Наполеон:
-            <ol>
-                <li>Приготувати тісто:
-                    <ol>
-                        <li>Закинути 0,5 кг борошна</li>
-                        <li>Додати 250 г масла</li>
-                        <li>Додати 1 яйце</li>
-                        <li>Додати 200 мл води</li>
-                        <li>Замішати тісто і розділити на 8 рівних частин</li>
-                    </ol>
-                </li>
-                <li>Приготувати крем:
-                    <ol>
-                        <li>Збити 1 літр молока з 200 г цукру і 2 пачками ванільного цукру</li>
-                        <li>Додати 200 г борошна і варити до готовності</li>
-                    </ol>
-                </li>
-                <li>Скласти торт:
-                    <ol>
-                        <li>Розкатати кожен шар тіста і пекти 8 тонких коржів</li>
-                        <li>Поступово намазувати крем між коржами</li>
-                        <li>Залишити торт в морозильнику на 2 години</li>
-                    </ol>
-                </li>
-                <li>Посипати торт цукром усередині і зверху</li>
-                <li>Подавати з йогуртом та фруктами!</li>
-            </ol>
-        </li>
-    </ol>
+    <div class="block">
+        <h2>Мій улюблений десерт</h2>
+        <ol>
+            <li>Приготувати торт Наполеон:
+                <ol>
+                    <li>Приготувати тісто:
+                        <ol>
+                            <li>Закинути 0,5 кг борошна</li>
+                            <li>Додати 250 г масла</li>
+                            <li>Додати 1 яйце</li>
+                            <li>Додати 200 мл води</li>
+                            <li>Замішати тісто і розділити на 8 рівних частин</li>
+                        </ol>
+                    </li>
+                    <li>Приготувати крем:
+                        <ol>
+                            <li>Збити 1 літр молока з 200 г цукру і 2 пачками ванільного цукру</li>
+                            <li>Додати 200 г борошна і варити до готовності</li>
+                        </ol>
+                    </li>
+                    <li>Скласти торт:
+                        <ol>
+                            <li>Розкатати кожен шар тіста і пекти 8 тонких коржів</li>
+                            <li>Поступово намазувати крем між коржами</li>
+                            <li>Залишити торт в морозильнику на 2 години</li>
+                        </ol>
+                    </li>
+                    <li>Посипати торт цукром усередині і зверху</li>
+                    <li>Подавати з йогуртом та фруктами!</li>
+                </ol>
+            </li>
+        </ol>
+    </div>
 </body>
 </html>
