--- a/nowadays.html
+++ b/nowadays.html
@@ -4,29 +4,35 @@
     <meta charset="UTF-8">
     <title>Сьогодення Лисенка Дениса Олександровича.</title>
     <style>
-        li:nth-child(odd) {
+        li:nth-child(odd) 
+        {
             background-color: grey; 
             color: white; 
         }
 
-        li:nth-child(even) {
+        li:nth-child(even) 
+        {
             background-color: white; 
         }
         
-        h1 {
+        h1 
+        {
             text-align: center;
             font-size: 22px;
         }
 
-        p a {
+        p a 
+        {
             font-style: italic;
         }
 
-        h2 {
+        h2 
+        {
             text-align: center;
         }
 
-        .block {
+        .block 
+        {
             border: 1px solid black;
             margin: 10px;
             padding: 10px;
