--- a/friends.html
+++ b/friends.html
@@ -4,51 +4,90 @@
     <meta charset="UTF-8">
     <title>Друзі Лисенка Дениса Олександровича</title>
     <style>
-        body {
+        body 
+        {
             font-family: Arial, sans-serif;
         }
-        h2 {
-            color: blue;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        ul li {
-            background-color: lightgrey;
-            margin-bottom: 10px;
-            padding: 10px;
-        }
-        h1 {
+
+        h1
+        {
             text-align: center;
             font-size: 22px;
         }
 
-        p a {
+        p a 
+        {
             font-style: italic;
         }
 
-        h2 {
+        h2 
+        {
             text-align: center;
+            color: blue;
         }
 
-        table {
+        ul 
+        {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li 
+        {
+            background-color: lightgrey;
+            margin-bottom: 10px;
+            padding: 10px;
+        }
+
+        .block 
+        {
+            border: 1px solid black;
+            margin: 10px;
+            padding: 10px;
+            background-color: lightgrey;
+        }
+
+        table 
+        {
             margin-left: auto;
             margin-right: auto;
             font-weight: bold;
+            border-collapse: collapse;
+            width: 80%;
         }
 
-        th, td {
+        th, td 
+        {
             text-align: center;
             color: white;
+            border: 1px solid black;
+            padding: 10px;
         }
 
-        th {
+        th 
+        {
             background-color: green;
         }
 
         td:last-child {
             text-align: right;
+        }
+
+        @media only screen and (min-width: 992px) 
+        {
+            .block 
+            {
+                display: inline-block;
+                width: 48%;
+            }
+        }
+
+        @media only screen and (max-width: 991px) 
+        {
+            .block 
+            {
+                width: 100%;
+            }
         }
     </style>
 </head>
@@ -57,36 +96,41 @@
 
     <p><a href="index.html"><i>Назад на головну</i></a></p>
 
-   <h2>Мої друзі</h2>
-    <ul>
-        <li>
-            <strong>Прізвище:</strong> Іванов<br>
-            <strong>Ім’я:</strong> Владислав<br>
-            <strong>Дата народження:</strong> 15.07.2006<br>
-            <strong>Адреса проживання:</strong> вул. Центральна, 123<br>
-            <strong>Контактний телефон:</strong> +380123456789
-        </li>
-        <li>
-            <strong>Прізвище:</strong> Глек<br>
-            <strong>Ім’я:</strong> Юрій<br>
-            <strong>Дата народження:</strong> 03.02.2007<br>
-            <strong>Адреса проживання:</strong> вул. Шевченка, 456<br>
-            <strong>Контактний телефон:</strong> +380987654321
-        </li>
-        <li>
-            <strong>Прізвище:</strong> Сидоренко<br>
-            <strong>Ім’я:</strong> Андрій<br>
-            <strong>Дата народження:</strong> 20.09.2004<br>
-            <strong>Адреса проживання:</strong> вул. Чоровола, 789<br>
-            <strong>Контактний телефон:</strong> +380234567890
-        </li>
-        <li>
-            <strong>Прізвище:</strong> Коваленко<br>
-            <strong>Ім’я:</strong> Вадим<br>
-            <strong>Дата народження:</strong> 10.05.2006<br>
-            <strong>Адреса проживання:</strong> вул. Чорновола, 101<br>
-            <strong>Контактний телефон:</strong> +380345678901
-        </li>
-    </ul>
+    <div class="block">
+        <h2>Мої друзі</h2>
+        <ul>
+            <li>
+                <strong>Прізвище:</strong> Іванов<br>
+                <strong>Ім’я:</strong> Владислав<br>
+                <strong>Дата народження:</strong> 15.07.2006<br>
+                <strong>Адреса проживання:</strong> вул. Центральна, 123<br>
+                <strong>Контактний телефон:</strong> +380123456789
+            </li>
+        </ul>
+    </div>
+
+    <div class="block">
+        <h2>Таблиця друзів</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Прізвище</th>
+                    <th>Ім’я</th>
+                    <th>Дата народження</th>
+                    <th>Адреса проживання</th>
+                    <th>Контактний телефон</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Іванов</td>
+                    <td>Владислав</td>
+                    <td>15.07.2006</td>
+                    <td>вул. Центральна, 123</td>
+                    <td>+380123456789</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
