--- a/gallery.html
+++ b/gallery.html
@@ -82,10 +82,10 @@
         <img src="https://github.com/DenisLysenko0/Pr4/blob/main/200.jpg%26text%3DIts%20me%2C%20Denis%26italic.org.chromium.not-a-real-type.830859E7-C463-44C9-9EC5-282CDB793F47.org.chromium.not-a-real-type.830859E7-C463-44C9-9EC5-282CDB793F47" alt="Зображення у цій папці">
 
         <h3>Зображення у папці</h3>
-        <img src="ваш-силка-сюди" alt="Зображення у папці">
+        <img src="https://github.com/DenisLysenko0/Pr4/blob/main/200.jpg%26text%3DIts%20me%2C%20Denis%26italic.org.chromium.not-a-real-type.830859E7-C463-44C9-9EC5-282CDB793F47.org.chromium.not-a-real-type.830859E7-C463-44C9-9EC5-282CDB793F47" alt="Зображення у папці">
 
         <h3>Зображення онлайн</h3>
-        <img src="ваш-силка-сюди" alt="Зображення онлайн">
+        <img src="https://github.com/DenisLysenko0/Pr4/blob/main/200.jpg%26text%3DIts%20me%2C%20Denis%26italic.org.chromium.not-a-real-type.830859E7-C463-44C9-9EC5-282CDB793F47.org.chromium.not-a-real-type.830859E7-C463-44C9-9EC5-282CDB793F47" alt="Зображення онлайн">
     </div>
 </body>
 </html>
